Modify stylesheet to add spacing between navbar and other contents considering its position is fixed

--- a/template/css/WeConnect_stylesheet.css
+++ b/template/css/WeConnect_stylesheet.css
@@ -1,7 +1,7 @@
 body{
     background-color: white;
     font-family: 'Times New Roman', Times, serif;
-    padding-top: 100px;
+    padding-top: 4%;
 }
 
 .container-fluid{
